--- a/terraform-jenkins/Jenkinsfile
+++ b/terraform-jenkins/Jenkinsfile
@@ -1,23 +1,35 @@
 pipeline {
     agent any
 
+    environment {
+        TF_IN_AUTOMATION = "true"
+    }
+
     stages {
+
+        stage('Checkout Code') {
+            steps {
+                checkout scm
+            }
+        }
+
         stage('Terraform Init') {
             steps {
-                sh 'cd /home/ubuntu/tasks/terraform-jenkins && terraform init'
+                sh 'terraform init'
+            }
+        }
+
+        stage('Terraform Validate') {
+            steps {
+                sh 'terraform validate'
             }
         }
 
         stage('Terraform Plan') {
             steps {
-                sh 'cd /home/ubuntu/tasks/terraform-jenkins && terraform plan -out=tfplan'
+                sh 'terraform plan'
             }
         }
 
-        stage('Terraform Apply') {
-            steps {
-                sh 'cd /home/ubuntu/tasks/terraform-jenkins && terraform apply -auto-approve tfplan'
-            }
-        }
     }
 }
