--- a/terraform-jenkins/Jenkinsfile
+++ b/terraform-jenkins/Jenkinsfile
@@ -1,35 +1,35 @@
 pipeline {
-    agent any
+  agent any
 
-    environment {
-        TF_IN_AUTOMATION = "true"
+  stages {
+    stage('Checkout Code') {
+      steps {
+        checkout scm
+      }
     }
 
-    stages {
-
-        stage('Checkout Code') {
-            steps {
-                checkout scm
-            }
+    stage('Terraform Init') {
+      steps {
+        dir('terraform-jenkins') {
+          sh 'terraform init'
         }
-
-        stage('Terraform Init') {
-            steps {
-                sh 'terraform init'
-            }
-        }
-
-        stage('Terraform Validate') {
-            steps {
-                sh 'terraform validate'
-            }
-        }
-
-        stage('Terraform Plan') {
-            steps {
-                sh 'terraform plan'
-            }
-        }
-
+      }
     }
+
+    stage('Terraform Validate') {
+      steps {
+        dir('terraform-jenkins') {
+          sh 'terraform validate'
+        }
+      }
+    }
+
+    stage('Terraform Plan') {
+      steps {
+        dir('terraform-jenkins') {
+          sh 'terraform plan'
+        }
+      }
+    }
+  }
 }
